--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.5.2",
     "vue-carousel-3d": "^0.2.0",
     "vue-material-design-icons": "^3.1.0",
+    "vue-mq": "^1.0.1",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.12"
   },
