--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
+    "axios": "^0.18.0",
     "vue": "^2.5.2",
     "vue-carousel-3d": "^0.2.0",
     "vue-material-design-icons": "^3.1.0",
